--- a/.github/workflows/react.yaml
+++ b/.github/workflows/react.yaml
@@ -79,5 +79,6 @@ jobs:
             <table>
               <tr>
                 <td><img src="${{ steps.upload-artifact-wiki.outputs.url }}/__screenshots__/App/component/Primary.png"></td>
+                <td><img src="${{ steps.upload-artifact-wiki.outputs.url }}/__screenshots__/App/component/Dark.png"></td>
               </tr>
             </table>
