--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@eslint/js": "9.19.0",
     "@storybook/react": "^8.0.8",
     "@storybook/react-vite": "^8.0.8",
     "@testing-library/jest-dom": "6.6.3",
