--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/setup-node@1d0ff469b7ec7b3cb9d8673fde0c81c44821de2a # v4.2.0
         with:
           node-version-file: .node-version
-      - run: corepack enable pnpm
+      - run: npm install -g pnpm@latest-10
       - run: pnpm i
       - run: pnpm run storycap
       - uses: int128/upload-artifact-wiki-action@e56d25dd3c64eb34e9314af2e48abcf25505023b # v1.15.0
