--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "9.19.0",
     "@storybook/react": "^8.0.8",
     "@storybook/react-vite": "^8.0.8",
     "@testing-library/jest-dom": "6.6.3",
@@ -31,6 +32,7 @@
     "eslint": "^9.0.0",
     "eslint-plugin-react": "^7.34.1",
     "jsdom": "^25.0.0",
+    "pnpm": "10.1.0",
     "prettier": "3.4.2",
     "storybook": "^8.0.8",
     "storycap": "^5.0.0",
@@ -39,5 +41,5 @@
     "vite": "^6.0.0",
     "vitest": "^3.0.0"
   },
-  "packageManager": "pnpm@9.15.4"
+  "packageManager": "pnpm@10.1.0"
 }
