--- a/.github/workflows/react.yaml
+++ b/.github/workflows/react.yaml
@@ -44,7 +44,6 @@ jobs:
       - run: npm install -g pnpm@latest-10
       - run: pnpm i
       - run: pnpm run test
-      - run: pnpm run lint
 
   generate:
     runs-on: ubuntu-latest
@@ -59,5 +58,5 @@ jobs:
           package-manager-cache: false
       - run: npm install -g pnpm@latest-10
       - run: pnpm i
-      - run: pnpm run format
+      - run: pnpm biome check --fix
       - uses: int128/update-generated-files-action@f6dc44e35ce252932e9018f1c38d1e2a4ff80e14 # v2.60.0
