--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "scripts": {
     "dev": "vite build --watch",
     "build": "tsc && vite build",
-    "lint": "eslint .",
-    "format": "prettier --write src",
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -18,7 +16,7 @@
     "react-dom": "19.1.1"
   },
   "devDependencies": {
-    "@eslint/js": "9.35.0",
+    "@biomejs/biome": "2.2.6",
     "@storybook/react": "^9.0.0",
     "@storybook/react-vite": "^9.0.0",
     "@testing-library/jest-dom": "6.9.1",
@@ -29,15 +27,11 @@
     "@types/react": "19.1.14",
     "@types/react-dom": "19.1.9",
     "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.0.0",
-    "eslint-plugin-react": "^7.34.1",
     "jsdom": "^26.0.0",
     "pnpm": "10.16.0",
-    "prettier": "3.6.2",
     "storybook": "^9.0.0",
     "storycap": "^5.0.0",
     "typescript": "5.9.3",
-    "typescript-eslint": "^8.0.0",
     "vite": "^7.0.0",
     "vitest": "^3.0.0"
   },
