--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -51,3 +51,4 @@ jobs:
                 <td><img src="${{ steps.upload-artifact-wiki.outputs.url }}/__screenshots__/Preferences/component/Primary.png"></td>
               </tr>
             </table>
+      - run: pnpm reg-suit run
