--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,6 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>int128/renovate-base",
-    "helpers:pinGitHubActionDigests",
-  ],
+    "config:best-practices"
+  ]
 }
