--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -32,6 +32,7 @@ jobs:
           package-manager-cache: false
       - run: npm install -g pnpm@latest-10
       - run: pnpm i
+      - run: pnpm exec playwright install
       - run: pnpm run test-storybook
       - uses: int128/upload-artifact-wiki-action@768b6d5c033f420ef3e06c79de32aae54b031e57 # v1.17.0
         id: upload-artifact-wiki
