--- a/package.json
+++ b/package.json
@@ -28,15 +28,14 @@
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "@vitejs/plugin-react": "5.1.0",
+    "@vitest/browser": "3.2.4",
     "jsdom": "26.1.0",
+    "playwright": "^1.56.1",
     "pnpm": "10.19.0",
     "storybook": "9.1.16",
     "typescript": "5.9.3",
     "vite": "7.1.12",
-    "vitest": "3.2.4",
-    "playwright": "^1.56.1",
-    "@vitest/browser": "3.2.4",
-    "@vitest/coverage-v8": "3.2.4"
+    "vitest": "3.2.4"
   },
   "packageManager": "pnpm@10.20.0"
 }
