--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@types/react-dom": "19.2.2",
     "@vitejs/plugin-react": "5.1.0",
     "@vitest/browser": "4.0.8",
+    "@vitest/browser-playwright": "4.0.8",
     "jsdom": "27.1.0",
-    "playwright": "1.56.1",
     "pnpm": "10.20.0",
     "storybook": "10.0.6",
     "typescript": "5.9.3",
